added comments and more semantics

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 </head>
 
 <body>
+    <!-- header bar at top of page -->
     <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <section>
+        <!-- Navigation bar -->
+        <nav>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -22,9 +24,11 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </section>
+        </nav>
     </header>
+    <!-- hero image across page -->
     <section class="hero"></section>
+    <!-- all articles in the center column -->
     <section class="content">
         <article id="search-engine-optimization" class="search-engine-optimization articles">
             <img src="./assets/images/search-engine-optimization.jpg" alt= "Desk with pencils and a notepad that has an SEO concept wheel" class="float-left" />
@@ -48,6 +52,7 @@
             </p>
         </article>
     </section>
+    <!-- aside information on the right hand column -->
     <aside class="benefits">
         <figure class="benefit-lead margin-aside">
             <h3>Lead Generation</h3>
