--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
+    <meta name="description" content="Sample Webpage" />
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Horieson Social Solution Services</title>
 </head>
