--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Sample Webpage" />
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Horieson Social Solution Services</title>
@@ -12,45 +12,60 @@
 <body>
     <!-- header bar at top of page -->
     <header>
-        <h1>Hori<span class="seo">seo</span>n</h1>
-        <!-- Navigation bar -->
-        <nav>
-            <ul>
-                <li>
-                    <a href="#search-engine-optimization">Search Engine Optimization</a>
-                </li>
-                <li>
-                    <a href="#online-reputation-management">Online Reputation Management</a>
-                </li>
-                <li>
-                    <a href="#social-media-marketing">Social Media Marketing</a>
-                </li>
-            </ul>
-        </nav>
+        <div class="col">
+            <h1>Hori<span class="seo">seo</span>n</h1>
+        </div>
+        <div class="col">
+            <!-- Navigation bar -->
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#search-engine-optimization">Search Engine Optimization</a>
+                    </li>
+                    <li>
+                        <a href="#online-reputation-management">Online Reputation Management</a>
+                    </li>
+                    <li>
+                        <a href="#social-media-marketing">Social Media Marketing</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+
     </header>
     <!-- hero image across page -->
     <section class="hero"></section>
     <!-- all articles in the center column -->
     <section class="content">
         <article id="search-engine-optimization" class="search-engine-optimization articles">
-            <img src="./assets/images/search-engine-optimization.jpg" alt= "Desk with pencils and a notepad that has an SEO concept wheel" class="float-left" />
+            <img src="./assets/images/search-engine-optimization.jpg"
+                alt="Desk with pencils and a notepad that has an SEO concept wheel" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
-                The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
+                The dominance of mobile internet use means that users are searching for the right business as they
+                travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase
+                your visibility and find the right customers for your business.
             </p>
         </article>
         <article id="online-reputation-management" class="online-reputation-management articles">
-            <img src="./assets/images/online-reputation-management.jpg" alt="A person working on a laptop with graphs and the word reputation in bold" class="float-right" />
+            <img src="./assets/images/online-reputation-management.jpg"
+                alt="A person working on a laptop with graphs and the word reputation in bold" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
-                The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
+                The web is full of opinions, and some of these can be negative. Social media allows anyone with an
+                internet connection to say whatever they want about your business. Online Reputation Management gives
+                you the control over what potential customers see when they search for your business.
             </p>
         </article>
         <article id="social-media-marketing" class="social-media-marketing articles">
-            <img src="./assets/images/social-media-marketing.jpg" alt="A group of people sit at a desk filled with common social media icons and lingos such as like and tweet" class="float-left" />
+            <img src="./assets/images/social-media-marketing.jpg"
+                alt="A group of people sit at a desk filled with common social media icons and lingos such as like and tweet"
+                class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
-                Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
+                Social media continues to have a sizable influence on buying habits. Social media marketing helps you
+                determine which platforms are suited to your brand, using analytics to find the right markets and
+                increase your lead generation.
             </p>
         </article>
     </section>
@@ -58,23 +73,28 @@
     <aside class="benefits">
         <figure class="benefit-lead margin-aside">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" alt="An icon that has a gear ontop of a funnel that drips revenue"/>
+            <img src="./assets/images/lead-generation.png"
+                alt="An icon that has a gear ontop of a funnel that drips revenue" />
             <p>
-                Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
+                Inbound strategies for lead generation require less work for your business, bringing customers directly
+                to your website.
             </p>
         </figure>
         <figure class="benefit-brand margin-aside">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" alt="An icon of a person in a suit with a shinning lightbulb for a head"/>
+            <img src="./assets/images/brand-awareness.png"
+                alt="An icon of a person in a suit with a shinning lightbulb for a head" />
             <p>
-                Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
+                Users find your business through paid and organic searches, increasing the search ranking and visibility
+                for your business.
             </p>
         </figure>
         <figure class="benefit-cost margin-aside">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" alt="An icon of a gear behind three dollar signs"/>
+            <img src="./assets/images/cost-management.png" alt="An icon of a gear behind three dollar signs" />
             <p>
-                As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
+                As the search ranking for your business increases, your advertising costs decrease, and you no longer
+                need to advertise your page.
             </p>
         </figure>
     </aside>
@@ -85,4 +105,5 @@
         </p>
     </footer>
 </body>
+
 </html>
